namespace.yaml
apiVersion: v1
kind: Namespace
spec:
  name: my-namespace
