ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: my-namespace
  labels:
    name: myingress
spec:
  rules:
  - host: test.host
    http:
      paths:
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /api-notes
        backend:
          service:
            name: backend-service
            port:
              number: 80
